chore: 更新项目配置，添加测试脚本和依赖，修改 TypeScript 配置以包含测试配置文件。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,13 +13,14 @@
     "moduleDetection": "force",
     "noEmit": true,
 
+
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "vitest.config.ts"]
 }
