--- a/package.json
+++ b/package.json
@@ -31,19 +31,23 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@eslint/json": "^0.12.0",
+    "@eslint/markdown": "^6.5.0",
     "@types/jsdom": "^21.1.7",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "@vitest/coverage-v8": "^3.2.3",
     "@vitest/ui": "^3.2.3",
-    "eslint": "^9.18.0",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.4.1",
+    "globals": "^16.2.0",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "lint-staged": "^15.2.11",
     "prettier": "^3.4.2",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.34.0",
     "vite": "^6.3.5",
     "vitest": "^3.2.3"
   },
