--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@eslint/markdown": "^6.5.0",
     "@tailwindcss/vite": "^4.1.9",
     "@types/jsdom": "^21.1.7",
+    "@types/node": "^24.0.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
+    "@vitejs/plugin-react": "^4.5.2",
     "@vitest/coverage-v8": "^3.2.3",
     "@vitest/ui": "^3.2.3",
     "eslint": "^9.28.0",
@@ -51,6 +53,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.0",
     "vite": "^6.3.5",
@@ -67,6 +70,11 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
-    "ai": "^4.3.16"
+    "@radix-ui/react-slot": "^1.2.3",
+    "ai": "^4.3.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.514.0",
+    "tailwind-merge": "^3.3.1"
   }
 }
