--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
+    "demo": "vite",
+    "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest run",
