--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,13 @@
     "skipLibCheck": true,
 
     /* JSX */
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "jsxImportSource": "react",
-
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
     "moduleDetection": "force",
     "noEmit": true,
     "baseUrl": ".",
