--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.514.0",
     "tailwind-merge": "^3.3.1",
+    "turndown": "^7.2.0",
     "zustand": "^5.0.5"
   }
 }
