--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@eslint/json": "^0.12.0",
     "@eslint/markdown": "^6.5.0",
     "@locator/runtime": "^0.4.4",
+    "@playwright/test": "^1.53.1",
     "@tailwindcss/vite": "^4.1.9",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^24.0.0",
