--- a/package.json
+++ b/package.json
@@ -77,6 +77,9 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
+    "@langchain/anthropic": "^0.3.23",
+    "@langchain/community": "^0.3.47",
+    "@langchain/google-genai": "^0.2.12",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -96,11 +99,20 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "ai": "^4.3.16",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
+    "clipboardy": "^4.0.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
+    "hnswlib-node": "^3.0.0",
+    "langchain": "^0.3.29",
     "lucide-react": "^0.514.0",
+    "posthog-node": "^5.1.1",
+    "systeminformation": "^5.27.6",
     "tailwind-merge": "^3.3.1",
     "turndown": "^7.2.0",
+    "uuid": "^11.1.0",
+    "zod": "^3.25.67",
     "zustand": "^5.0.5"
   }
 }
