--- a/package.json
+++ b/package.json
@@ -76,6 +76,10 @@
     ]
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/azure": "^1.3.23",
+    "@ai-sdk/deepseek": "^0.2.14",
+    "@ai-sdk/google": "^1.2.19",
     "@ai-sdk/openai": "^1.3.22",
     "@langchain/anthropic": "^0.3.23",
     "@langchain/community": "^0.3.47",
@@ -98,6 +102,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@xenova/transformers": "^2.17.2",
     "ai": "^4.3.16",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
@@ -105,9 +110,11 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "hnswlib-node": "^3.0.0",
+    "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.29",
     "lucide-react": "^0.514.0",
     "posthog-node": "^5.1.1",
+    "screenshot-desktop": "^1.15.1",
     "systeminformation": "^5.27.6",
     "tailwind-merge": "^3.3.1",
     "turndown": "^7.2.0",
