--- a/package.json
+++ b/package.json
@@ -82,6 +82,10 @@
     "@ai-sdk/deepseek": "^0.2.14",
     "@ai-sdk/google": "^1.2.19",
     "@ai-sdk/openai": "^1.3.22",
+    "@langchain/anthropic": "^0.3.23",
+    "@langchain/community": "^0.3.47",
+    "@langchain/core": "^0.3.59",
+    "@langchain/google-genai": "^0.2.12",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -109,6 +113,7 @@
     "dotenv": "^16.5.0",
     "hnswlib-node": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.29",
     "lucide-react": "^0.514.0",
     "playwright": "^1.53.1",
     "posthog-node": "^5.1.1",
