--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@types/lodash-es": "^4.17.12",
     "@xenova/transformers": "^2.17.2",
     "ai": "^4.3.16",
     "axios": "^1.10.0",
@@ -114,6 +115,7 @@
     "hnswlib-node": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.29",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.514.0",
     "playwright": "^1.53.1",
     "posthog-node": "^5.1.1",
