--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
 
+    /* 装饰器支持 */
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+
     /* JSX */
     "jsx": "preserve",
     "jsxImportSource": "react",
